Fixed tool specification panel alignment to handle multi-line elements. Fixed agate logo scale.

--- a/sass/compareFramework.scss
+++ b/sass/compareFramework.scss
@@ -272,3 +272,19 @@ i.uncheck {
     top: 2px; 
 }
 /* -----------------------------------*/
+
+.flex-item {
+    align-items: stretch;
+}
+
+.flex-col {
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */
+    display: -webkit-flex;     /* NEW - Chrome */
+    display: flex;
+}
+
+ul {
+    list-style-type: none;
+}
